@@ -2,6 +2,6 @@
 resolver = "2"
 members = [
   "zebra-rs",
-  "zebctl",
+  "zctl",
   "cli-helper",
 ]
