@@ -1,5 +1,5 @@
 [package]
-name = "zebctl"
+name = "zctl"
 version = "0.6.7"
 edition = "2024"
 
